[gd_scene load_steps=9 format=3 uid="uid://brhcqgf3wnbra"]

[ext_resource type="Script" path="res://UI/ui_context.gd" id="1_f4upf"]
[ext_resource type="Script" path="res://scenes/main_text_container.gd" id="2_yxorg"]
[ext_resource type="Script" path="res://UI/TextContainer.gd" id="3_vua46"]
[ext_resource type="Theme" uid="uid://274wql32h078" path="res://UI/theme_rich_text_label.tres" id="4_it6u7"]
[ext_resource type="Theme" uid="uid://bh5dnebpv3ymd" path="res://UI/theme_text_edit.tres" id="5_ar2a5"]
[ext_resource type="PackedScene" uid="uid://beobmj8lsrtay" path="res://scenes/exterior_inventory.tscn" id="5_e1vge"]
[ext_resource type="PackedScene" uid="uid://pnlo2rys0lds" path="res://scenes/exterior_notebook.tscn" id="6_dpms1"]

[sub_resource type="Theme" id="Theme_dexcp"]
default_base_scale = 1.0
MarginContainer/colors/background_color = Color(0, 0.027451, 0.027451, 1)

[node name="UIContext" type="Node"]
script = ExtResource("1_f4upf")

[node name="InteractionWindow" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1024, 480)
offset_right = 1028.0
offset_bottom = 484.0
columns = 2

[node name="MapLoader" type="Control" parent="InteractionWindow"]
custom_minimum_size = Vector2(216, 384)
layout_mode = 2

[node name="MainTextContainer" type="MarginContainer" parent="InteractionWindow"]
custom_minimum_size = Vector2(808, 384)
layout_mode = 2
theme = SubResource("Theme_dexcp")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("2_yxorg")

[node name="TextDisplay" type="ScrollContainer" parent="InteractionWindow/MainTextContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TextContainer" type="VBoxContainer" parent="InteractionWindow/MainTextContainer/TextDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_vua46")

[node name="GameText" type="RichTextLabel" parent="InteractionWindow/MainTextContainer/TextDisplay/TextContainer"]
layout_mode = 2
theme = ExtResource("4_it6u7")
text = "Placeholder Game Text"
fit_content = true

[node name="OverlayContainer" type="PanelContainer" parent="InteractionWindow/MainTextContainer"]
visible = false
layout_mode = 2

[node name="InventoryModal" parent="InteractionWindow/MainTextContainer/OverlayContainer" instance=ExtResource("5_e1vge")]

[node name="NotebookModal" parent="InteractionWindow/MainTextContainer/OverlayContainer" instance=ExtResource("6_dpms1")]

[node name="HelpSpace" type="MarginContainer" parent="InteractionWindow"]
custom_minimum_size = Vector2(216, 96)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="RichTextLabel" type="RichTextLabel" parent="InteractionWindow/HelpSpace"]
layout_mode = 2
theme = ExtResource("4_it6u7")
text = "This is where Gamut offers helpful hints"

[node name="CommandInput" type="MarginContainer" parent="InteractionWindow"]
custom_minimum_size = Vector2(808, 96)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="TextEdit" type="TextEdit" parent="InteractionWindow/CommandInput"]
layout_mode = 2
theme = ExtResource("5_ar2a5")
placeholder_text = "This is where you enter commands"

[connection signal="clear_game_text" from="." to="InteractionWindow/MainTextContainer/TextDisplay/TextContainer" method="_on_ui_context_clear_game_text"]
[connection signal="hide_items" from="." to="InteractionWindow/MainTextContainer" method="_on_ui_context_hide_items"]
[connection signal="hide_notes" from="." to="InteractionWindow/MainTextContainer" method="_on_ui_context_hide_notes"]
[connection signal="show_items" from="." to="InteractionWindow/MainTextContainer" method="_on_ui_context_show_items"]
[connection signal="show_notes" from="." to="InteractionWindow/MainTextContainer" method="_on_ui_context_show_notes"]
