extends MarginContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_ui_context_hide_items():
	pass # Replace with function body.


func _on_ui_context_show_items():
	pass # Replace with function body.


func _on_ui_context_show_notes():
	pass # Replace with function body.


func _on_ui_context_hide_notes():
	pass # Replace with function body.
